package __uml.association;/*
    @author wxg
    @date 2021/12/24-16:34
    */

public class Person {
    private IdCard id;
}


class IdCard {

}