package __uml.dependence;

/**
 * @author capensis
 */
public class PersonDao {

}
