package __uml.dependence;/*
    @author wxg
    @date 2021/12/21-1:38
    */

/**
 * @author capensis
 */
public class PersonServiceBean {
    private PersonDao personDao;

    public void save(Person person) {
    }

    /**
     * @param personid id
     * @return null
     */
    public IDCard getIdCard(Integer personid) {
        return null;
    }

    public void modify() {
        Department department = new Department();
    }

}
